[tool.poetry]
name = "clarabeta"
version = "0.1.0"
description = ""
authors = ["Phoenix and Parker"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^2.0.0"
discord = "^1.0.1"
discord-ext-slash = "^0.1.3"
discord-py-slash-command = "^1.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
